Fixed Bugs
Mobile Horizontal Scroll Removed
Home Page Zoom Resistance Fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,8 @@ body {
   position: relative;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 /* Font-size of Navbar */
@@ -46,6 +48,7 @@ body {
   height: 100vh;
   width: 100vw;
   flex-flow: column;
+  overflow:auto;
 }
 
 .wrapper2 {
@@ -365,7 +368,8 @@ body {
 }
 
 #create {
-  margin-top: 12rem;
+  margin-top: 8rem;
+  margin-bottom: 2rem;
   color: white;
   font-size: x-large;
   margin-right: 1.5rem;
